--- a/example.env
+++ b/example.env
@@ -11,3 +11,7 @@ POSTGRES_USER=aziemp66
 POSTGRES_PASSWORD=123456
 POSTGRES_PORT=5432
 POSTGRES_DB_NAME=e-commerce-be
+
+REDIS_HOST=localhost:6379
+REDIS_PASSWORD=azie122333
+REDIS_DB=0
